# gcages

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  check_inventory.py  mkdocs.yml  properdocs.yml  pyproject.toml  requirements-docs-locked.txt  requirements-locked.txt  requirements-only-tests-locked.txt  requirements-only-tests-min-locked.txt  scratch.py  scratch2.py
.github/actions/setup/: action.yml
.github/workflows/: bump.yaml  ci-main-only.yaml  ci.yaml  deploy.yaml  install-pypi.yaml  release.yaml  test-upstream-latest.yaml
changelog/: 10.breaking.md  10.docs.md  10.feature.md  11.breaking.md  11.docs.md  11.feature.md  12.docs.md  13.docs.md  13.feature.md  14.feature.md  15.breaking.md  15.feature.md  16.breaking.md  16.fix.md  18.fix.md  23.breaking.md  25.breaking.md  26.improvement.md  29.breaking.md  3.trivial.md  30.breaking.md  30.trivial.md  31.trivial.md  32.trivial.md  33.improvement.md  35.breaking.md  35.fix.md  35.trivial.md  37.fix.md  38.breaking.md  38.trivial.md  39.breaking.md  4.trivial.md  40.breaking.md  41.trivial.md  42.fix.md  43.feature.md  45.breaking.md  45.feature.md  46.breaking.md  (+22 more)
docs/: NAVIGATION.md  changelog.md  development.md  gen_doc_stubs.py  installation.md
docs/development/: regression-testing-strategy.md
docs/further-background/: dependency-pinning-and-testing.md
docs/how-to-guides/: basic-calculation.md  how-to-run-the-ar6-workflow.py  how-to-run-the-cmip7-scenariomip-workflow.py  how-to-run-the-cmip7-scenariomip-workflow_sci.py  how-to-run-the-scijune2026-workflow.py  run-code-in-a-notebook.py
docs/tutorials/: understanding-the-naming-conventions.py
scripts/: add-locked-targets-to-pyproject-toml.py  changelog-to-release-template.py  check-change-in-regression-output.py  extract-unique-testing-scenarios.py  test-install.py
src/gcages/: __init__.py  aggregation.py  aneris_helpers.py  assertions.py  completeness.py  convention_mapping.py  exceptions.py  ghg_aggregation.py  harmonisation.py  index_manipulation.py  infilling.py  internal_consistency.py  pandas_openscm_tmp.py  renaming.py  scm_running.py  testing.py  typing.py  units_helpers.py
src/gcages/ar6/: __init__.py  climate_processor_ar6.py  harmonisation.py  infilling.py  post_processing.py  pre_processing.py  scm_running.py
src/gcages/cmip7_scenariomip/: __init__.py  gridding_emissions.py  harmonisation.py  harmonisation_country.py  infilling.py  old.py  post_processing.py  pre_processing.py  pre_processing_old.py  scm_running.py  scm_running_aux.py
src/gcages/cmip7_scenariomip/pre_processing/: __init__.py  assertions.py  completeness.py  constants.py  gridding_emissions_to_global_workflow_emissions.py  pre_processor.py  sector_cols.py
src/gcages/databases/: emissions_variables.csv  emissions_variables.py
src/gcages/harmonisation/: aneris.py  common.py
src/gcages/infilling/: __init__.py  silicone.py
src/gcages/sci_june_2026/: __init__.py  harmonisation.py  infilling.py  post_processing.py  pre_processing.py  scm_running.py
src/gcages/scm_running/: __init__.py  default_variables.py  magicc.py
tests/: conftest.py  test_testing.py
tests/integration/: test_ghg_aggregation_integration.py  test_testing.py  test_units_helpers.py
tests/integration/cmip7-scenariomip/: conftest.py  test_integration_cmip7_scenariomip_gridding_emissions.py  test_integration_cmip7_scenariomip_infilling.py  test_integration_cmip7_scenariomip_post_processing.py  test_integration_cmip7_scenariomip_pre_processing.py  test_integration_cmip7_scenariomip_pre_processing_gridding_emissions.py  test_integration_cmip7_scenariomip_scm_running.py
tests/integration/cmip7-scenariomip/pre-processing/: conftest.py  test_integration_cmip7_scenariomip_pre_processing.py
tests/integration/harmonisation/: test_integration_harmonisation.py
tests/integration/infilling/: test_infilling_integration.py
tests/regression/ar6/: convert_ar6_res_to_checking_csvs.py  convert_ar6_res_to_test_csvs.py  test_ar6_workflow.py  test_harmonisation.py  test_infilling_ar6_regression.py  test_pre_processing_and_harmonisation.py  test_pre_processing_and_harmonisation_ar6_regression.py  test_regression_ar6_infilling.py  test_regression_ar6_pre_processing_and_harmonisation.py  test_regression_ar6_scm_running_and_post_processing.py  test_scm_running_and_post_processing.py
tests/regression/ar6/ar6-output/: AR6_Scenarios_Database_metadata_indicators_v1.1_meta.csv
tests/regression/cmip7-scenariomip/: download_cmip7_scenariomip_history.py  download_cmip7_scenariomip_infilled.py  download_cmip7_scenariomip_infilling_db.py  test_regression_cmip7_scenariomip_harmonisation.py  test_regression_cmip7_scenariomip_infilling.py  test_regression_cmip7_scenariomip_pre_processing.py  test_regression_cmip7_scenariomip_pre_processing_and_harmonisation.py  test_regression_cmip7_scenariomip_scm_run.py  test_regression_cmip7_scenariomip_scm_runnig.py  test_regression_cmip7_scenariomip_scm_running.py  test_regression_cmip7_scenariomip_scm_running_post_processing.py  test_regression_cmip7_scenariomip_whole_pipeline.py
tests/regression/cmip7-scenariomip/cmip7-scenariomip-output/: AIM 3.0_SSP2 - Low Overshoot_a_GSAT.csv  AIM 3.0_SSP2 - Low Overshoot_a_complete.csv  (+61 more)
tests/regression/sci/: test_regression_sci_whole_pipeline.py
tests/regression/sci_june_2026/: test_regression_sci_harmonisation.py  test_regression_sci_infilling.py  test_regression_sci_pre_processing.py  test_regression_sci_scm_running_post_processing.py  test_regression_sci_whole_pipeline.py
tests/unit/: test_ghg_aggregation.py  test_renaming.py
tests/unit/ar6/: test_harmonisation.py  test_infilling.py
tests/unit/assertions/: test_assert_df_has_index_levels.py  test_assert_has_data_for_times.py
tests/unit/completeness/: test_assert_all_groups_are_complete.py
tests/unit/harmonisation/: test_assert_harmonised.py
tests/unit/infilled/: test_assert_infilled.py
tests/unit/infilling/: test_assert_infilled.py
tests/unit/renaming/: test_renaming.py  test_renaming_rcmip3.py
(+1143 files in other folders)
