[project]
name = "gcages"
version = "0.14.1a1"
description = "Global Climate Assessment of Global Emission Scenarios, typically (but not always) produced by Integrated Assessment Models (IAMs)."
authors = [
    { name = "Zebedee Nicholls", email = "zebedee.nicholls@climate-resource.com" },
]
license = { text = "3-Clause BSD License" }
requires-python = ">=3.10"
dependencies = [
    "backports-strenum>=1.3.1 ; python_version < '3.11'",
    "numpy>=1.26.0; python_version < '3.13'",
    "numpy>=2.1.0; python_version >= '3.13'",
    "pandas>=2.2.0",
    "pandas-openscm>=0.8.1",
]
readme = "README.md"
classifiers = [
    # Full list: https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://gcages.readthedocs.io"
Documentation = "https://gcages.readthedocs.io"
Changelog = "https://gcages.readthedocs.io/en/stable/changelog"
Repository = "https://github.com/openscm/gcages"
Issues = "https://github.com/openscm/gcages/issues"


[project.optional-dependencies]
ar6 = [
    "aneris-iamc>=0.4.2 ; python_version >= '3.10'",
    # The next two shouldn't need to be specified
    # but for some reason are
    "pycountry>=23.12.11 ; python_version >= '3.10'",
    "importlib-resources>=5.0 ; python_version >= '3.10' and python_version <= '3.11'",
    # Required to allow ciceroscm to be imported via openscm-runner
    "setuptools>=60.1.0 ; python_version >= '3.12'",
    "openscm-runner>=0.13.0",
    "pandas-indexing[units]>=0.6.3",
    "pandas-openscm[db]>=0.8.1",
    "pymagicc>=2.1.5",
    "scipy>=1.13.0",
    "scmdata>=0.18.0",
    "silicone>=1.3.0",
]
cmip7scenariomip = [
    "aneris-iamc>=0.4.2 ; python_version >= '3.10'",
    # The next two shouldn't need to be specified
    # but for some reason are
    "pycountry>=24.0 ; python_version >= '3.10'",
    "importlib-resources>=5.0 ; python_version >= '3.10' and python_version <= '3.11'",
    "openscm-runner>=0.13.0",
    # Required to allow ciceroscm to be imported via openscm-runner
    "setuptools>=60.1.0 ; python_version >= '3.12'",
    "pandas-indexing[units]>=0.6.3",
    "pandas-openscm[db]>=0.8.1",
    "pymagicc>=2.1.5",
    "scipy>=1.13.0",
    "scmdata>=0.18.0",
    "silicone>=1.3.0",
]
progress = [
    "tqdm>=4.0.0",
]
full = [
    "gcages[ar6]",
    "gcages[cmip7scenariomip]",
    "gcages[progress]",
]


[dependency-groups]
# The development dependencies are pinned
# to give a consistent starting point when using this template.
# They should be removed/updated/changed/loosened as suits your project.
# (As soon as you have a lock file, you can remove all of the implied dependencies.)
# (This is a workaround for the fact
# that we can't easily include the lock file in the copier template
# because of how locking works and the order of operations).
dev = [
    # Key dependencies
    # ----------------
    "liccheck==0.9.2",
    "mypy==1.14.0",
    "pandas-indexing>=0.6.3",
    "pandas-stubs>=2.2.2.240807",
    "pint>=0.24.4",
    # Required for liccheck, see https://github.com/dhatim/python-license-check/pull/113
    "pip==24.3.1",
    "pre-commit==4.0.1",
    "pytest>=8.3.4",
    # Required for liccheck, see https://github.com/dhatim/python-license-check/pull/113
    "setuptools==75.6.0",
    "tomli==2.2.1 ; python_full_version < '3.11'",
    "towncrier==24.8.0",
    "tqdm>=4.67.1",
    "typing-extensions>=4.12.2",
]
docs = [
    # Key dependencies
    # ----------------
    "attrs==25.3.0",
    "mkdocs-autorefs==1.4.4",
    "mkdocs-gen-files==0.6.1",
    "mkdocs-literate-nav==0.6.3",
    "mkdocs-material==9.7.6",
    "mkdocs-section-index==0.3.12",
    "mkdocstrings-python-xref==2.1.1",
    "mkdocstrings-python==2.0.3",
    "properdocs==1.6.7",
    "pymdown-extensions==10.21.3",
    "ruff==0.15.12",
    # Implied by the key dependencies above
    # -------------------------------------
    "babel==2.18.0",
        # via mkdocs-material
    "backrefs==7.0",
        # via mkdocs-material
    "certifi==2026.5.20",
        # via requests
    "charset-normalizer==3.4.7",
        # via requests
    "click==8.1.8",
        # via
        #   mkdocs
        #   properdocs
    "colorama==0.4.6",
        # via
        #   click
        #   griffecli
        #   mkdocs
        #   mkdocs-material
        #   properdocs
    "ghp-import==2.1.0",
        # via
        #   mkdocs
        #   properdocs
    "griffe==2.0.2",
        # via mkdocstrings-python-xref
    "griffecli==2.0.2",
        # via griffe
    "griffelib==2.0.2",
        # via
        #   griffe
        #   griffecli
        #   mkdocstrings-python
    "idna==3.16",
        # via requests
    "jinja2==3.1.5",
        # via
        #   mkdocs
        #   mkdocs-material
        #   mkdocstrings
        #   properdocs
    "markdown==3.10.2",
        # via
        #   mkdocs
        #   mkdocs-autorefs
        #   mkdocs-material
        #   mkdocstrings
        #   properdocs
        #   pymdown-extensions
    "markupsafe==3.0.2",
        # via
        #   jinja2
        #   mkdocs
        #   mkdocs-autorefs
        #   mkdocstrings
        #   properdocs
    "mergedeep==1.3.4",
        # via
        #   mkdocs
        #   mkdocs-get-deps
    "mkdocs-get-deps==0.2.2",
        # via mkdocs
    "mkdocs-material-extensions==1.3.1",
        # via mkdocs-material
    "mkdocs==1.6.1",
        # via
        #   mkdocs-autorefs
        #   mkdocs-gen-files
        #   mkdocs-literate-nav
        #   mkdocs-material
        #   mkdocs-section-index
        #   mkdocstrings
        # via
        #   mkdocstrings
        #   mkdocstrings-python
    "mkdocstrings==1.0.4",
        # via
        #   mkdocstrings-python
        #   mkdocstrings-python-xref
        # via mkdocstrings-python-xref
    "packaging==24.2",
        # via
        #   mkdocs
        #   properdocs
    "paginate==0.5.7",
        # via mkdocs-material
    "pathspec==1.1.1",
        # via
        #   mkdocs
        #   properdocs
    "platformdirs==4.3.6",
        # via
        #   mkdocs-get-deps
        #   properdocs
        # via
        #   mkdocs-gen-files
        #   mkdocs-literate-nav
        #   mkdocs-section-index
    "pygments==2.19.1",
        # via mkdocs-material
        # via
        #   mkdocs-material
        #   mkdocstrings
    "python-dateutil==2.9.0.post0",
        # via ghp-import
    "pyyaml-env-tag==1.1",
        # via
        #   mkdocs
        #   properdocs
    "pyyaml==6.0.2",
        # via
        #   mkdocs
        #   mkdocs-get-deps
        #   properdocs
        #   pymdown-extensions
        #   pyyaml-env-tag
    "requests==2.34.2",
        # via mkdocs-material
    "six==1.17.0",
        # via python-dateutil
    "typing-extensions==4.12.2 ; python_full_version < '3.11'",
        # via mkdocstrings-python
    "urllib3==2.7.0",
        # via requests
    "watchdog==6.0.0",
        # via
        #   mkdocs
        #   properdocs
    # Key dependencies for notebook_based_docs
    # ----------------------------------------
    "jupyterlab==4.4.5",
    "jupytext==1.17.2",
    "mkdocs-jupyter==0.25.1",
    # Implied by the key dependencies above
    # -------------------------------------
    "anyio==4.13.0",
        # via
        #   httpx
        #   jupyter-server
    "appnope==0.1.4 ; sys_platform == 'darwin'",
        # via ipykernel
    "argon2-cffi-bindings==25.1.0",
        # via argon2-cffi
    "argon2-cffi==25.1.0",
        # via jupyter-server
    "arrow==1.4.0",
        # via isoduration
    "asttokens==3.0.1",
        # via stack-data
    "async-lru==2.3.0",
        # via jupyterlab
        # via
        #   jsonschema
        #   referencing
    "beautifulsoup4==4.14.3",
        # via nbconvert
    "bleach==6.3.0",
        # via nbconvert
    "cffi==2.0.0",
        # via
        #   argon2-cffi-bindings
        #   pyzmq
    "comm==0.2.3",
        # via ipykernel
    "debugpy==1.8.20",
        # via ipykernel
    "decorator==5.3.1",
        # via ipython
    "defusedxml==0.7.1",
        # via nbconvert
    "exceptiongroup==1.3.0 ; python_full_version < '3.11'",
        # via
        #   anyio
        #   ipython
    "executing==2.2.1",
        # via stack-data
    "fastjsonschema==2.21.2",
        # via nbformat
    "fqdn==1.5.1",
        # via jsonschema
    "h11==0.16.0",
        # via httpcore
    "httpcore==1.0.9",
        # via httpx
    "httpx==0.28.1",
        # via jupyterlab
    "ipykernel==6.31.0",
        # via
        #   jupyterlab
        #   mkdocs-jupyter
    "ipython-pygments-lexers==1.1.1 ; python_full_version >= '3.11'",
        # via ipython
    "ipython==8.39.0 ; python_full_version < '3.11'",
        # via ipykernel
    "ipython==9.13.0 ; python_full_version >= '3.11'",
        # via ipykernel
    "isoduration==20.11.0",
        # via jsonschema
    "jedi==0.20.0",
        # via ipython
    "json5==0.14.0",
        # via jupyterlab-server
    "jsonpointer==3.1.1",
        # via jsonschema
    "jsonschema-specifications==2025.9.1",
        # via jsonschema
    "jsonschema==4.26.0",
        # via
        #   jupyter-events
        #   jupyterlab-server
        #   nbformat
    "jupyter-client==8.8.0",
        # via
        #   ipykernel
        #   jupyter-server
        #   nbclient
    "jupyter-core==5.9.1",
        # via
        #   ipykernel
        #   jupyter-client
        #   jupyter-server
        #   jupyterlab
        #   nbclient
        #   nbconvert
        #   nbformat
    "jupyter-events==0.12.1",
        # via jupyter-server
    "jupyter-lsp==2.3.1",
        # via jupyterlab
    "jupyter-server-terminals==0.5.4",
        # via jupyter-server
    "jupyter-server==2.18.2",
        # via
        #   jupyter-lsp
        #   jupyterlab
        #   jupyterlab-server
        #   notebook-shim
    "jupyterlab-pygments==0.3.0",
        # via nbconvert
    "jupyterlab-server==2.28.0",
        # via jupyterlab
        # via mkdocs-jupyter
    "lark==1.3.1",
        # via rfc3987-syntax
    "markdown-it-py==3.0.0",
        # via
        #   jupytext
        #   mdit-py-plugins
    "matplotlib-inline==0.2.2",
        # via
        #   ipykernel
        #   ipython
    "mdit-py-plugins==0.6.1",
        # via jupytext
    "mdurl==0.1.2",
        # via markdown-it-py
    "mistune==3.2.1",
        # via nbconvert
    "nbclient==0.10.4",
        # via nbconvert
    "nbconvert==7.17.1",
        # via
        #   jupyter-server
        #   mkdocs-jupyter
    "nbformat==5.10.4",
        # via
        #   jupyter-server
        #   jupytext
        #   nbclient
        #   nbconvert
    "nest-asyncio==1.6.0",
        # via ipykernel
    "notebook-shim==0.2.4",
        # via jupyterlab
    "overrides==7.7.0 ; python_full_version < '3.12'",
        # via jupyter-server
    "pandocfilters==1.5.1",
        # via nbconvert
    "parso==0.8.7",
        # via jedi
    "pexpect==4.9.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'",
        # via ipython
    "prometheus-client==0.25.0",
        # via jupyter-server
    "prompt-toolkit==3.0.52",
        # via ipython
        # via
        #   mkdocs-gen-files
        #   mkdocs-literate-nav
        #   mkdocs-section-index
    "psutil==7.2.2",
        # via
        #   ipykernel
        #   ipython
    "ptyprocess==0.7.0 ; os_name != 'nt' or (sys_platform != 'emscripten' and sys_platform != 'win32')",
        # via
        #   pexpect
        #   terminado
    "pure-eval==0.2.3",
        # via stack-data
    "pycparser==3.0 ; implementation_name != 'PyPy'",
        # via cffi
    "python-json-logger==4.1.0",
        # via jupyter-events
    "pywinpty==3.0.3 ; os_name == 'nt'",
        # via
        #   jupyter-server
        #   jupyter-server-terminals
        #   terminado
    "pyzmq==27.1.0",
        # via
        #   ipykernel
        #   jupyter-client
        #   jupyter-server
    "referencing==0.37.0",
        # via
        #   jsonschema
        #   jsonschema-specifications
        #   jupyter-events
    "rfc3339-validator==0.1.4",
        # via
        #   jsonschema
        #   jupyter-events
    "rfc3986-validator==0.1.1",
        # via
        #   jsonschema
        #   jupyter-events
    "rfc3987-syntax==1.1.0",
        # via jsonschema
    "rpds-py==0.30.0",
        # via
        #   jsonschema
        #   referencing
    "send2trash==2.1.0",
        # via jupyter-server
    "setuptools==75.6.0",
        # via jupyterlab
    "soupsieve==2.8.3",
        # via beautifulsoup4
    "stack-data==0.6.3",
        # via ipython
    "terminado==0.18.1",
        # via
        #   jupyter-server
        #   jupyter-server-terminals
    "tinycss2==1.4.0",
        # via bleach
    "tomli==2.2.1 ; python_full_version < '3.11'",
        # via
        #   jupyterlab
        #   jupytext
    "tornado==6.5.5",
        # via
        #   ipykernel
        #   jupyter-client
        #   jupyter-server
        #   jupyterlab
        #   terminado
    "traitlets==5.15.0",
        # via
        #   ipykernel
        #   ipython
        #   jupyter-client
        #   jupyter-core
        #   jupyter-events
        #   jupyter-server
        #   jupyterlab
        #   matplotlib-inline
        #   nbclient
        #   nbconvert
        #   nbformat
    "typing-extensions==4.12.2",
        # via
        #   anyio
        #   async-lru
        #   beautifulsoup4
        #   exceptiongroup
        #   ipython
        #   mistune
        #   mkdocstrings-python
        #   referencing
    "tzdata==2026.2",
        # via arrow
    "uri-template==1.3.0",
        # via jsonschema
    "wcwidth==0.7.0",
        # via prompt-toolkit
    "webcolors==25.10.0",
        # via jsonschema
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "seaborn>=0.13.2",
    "pandas-indexing>=0.6.3",
    "openscm-units>=0.6.3",
    "pint>=0.24.4",
]
# For minimum test dependencies.
# These are used when running our minimum PyPI install tests.
tests-min = [
    # Key dependencies
    # ----------------
    "pytest==8.3.4",
    # Implied by the key dependencies above
    # -------------------------------------
    "colorama==0.4.6 ; sys_platform == 'win32'",
        # via pytest
    "exceptiongroup==1.3.0 ; python_full_version < '3.11'",
        # via pytest
    "iniconfig==2.0.0",
        # via pytest
    "packaging==24.2",
        # via pytest
    "pluggy==1.5.0",
    "pytest-regressions>=2.7.0",
]
tests-full = [
    "pandas-indexing>=0.6.3",
    "pyarrow>=19.0.1",
    "pytest-cov>=6.0.0",
]
# Test dependencies
# (partly split because liccheck uses toml,
# which doesn't support inhomogeneous arrays).
tests = [
    {include-group = "tests-min"},
    {include-group = "tests-full"},
]
all-dev = [
    {include-group = "dev"},
    {include-group = "docs"},
    {include-group = "tests"},
]

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = [
    "src/gcages",
    "LICENCE",
]
excludes = ["tests"]

[tool.coverage.run]
source = ["gcages"]
omit = [
    "src/gcages/aneris_helpers.py",  # should all be pushed upstream, not our problem
]
branch = true

[tool.coverage.report]
fail_under = 75  # hard to keep high given inability to run things on python 3.9
skip_empty = true
show_missing = true
exclude_also = [
    "if TYPE_CHECKING",
    # Type overloading lines
    "@overload",
    "\\.\\.\\.",

]

[tool.mypy]
strict = true
disallow_any_unimported = true
show_error_codes = true
show_error_context = true
warn_unreachable = true
follow_imports = "normal"

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
markers = [
    # We skip some tests in CI by default
    # because they are very slow
    # and don't provide any true extra tests of robustness.
    # We have separate CI for these.
    "skip_ci_default: marks tests as being skipped in CI by default",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "superslow: marks tests as super slow i.e. taking multiple minutes to run (deselect with '-m \"not superslow\"')",
    "magicc_v760a3: tests requiring MAGICC 7.6.0a3",
]

[tool.ruff]
src = [
    "src",
]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "PL",
    "TRY",
    "NPY",
    "RUF",
    "UP",
    "S",
]
unfixable = [
    "PD002",
]
ignore = [
    "D200",
    "D400",
    "UP007",
]

[tool.ruff.lint.per-file-ignores]
"test*.py" = [
    "D",
    "S101",
    "PLR2004",
]
"docs/*" = [
    "D100",
    "E402",
    "S101",
]
"docs/how-to-guides/how-to-run-the-ar6-workflow.py" = [
    "E501",
    "PLR2004",
]
"scripts/*" = [
    "S101",
]
"stubs/*" = [
    "PLR0913",
]

[tool.ruff.lint.isort]
known-first-party = [
    "src",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.towncrier]
package = "gcages"
package_dir = "src"
filename = "docs/changelog.md"
directory = "changelog/"
title_format = "## gcages {version} ({project_date})"
underlines = [
    "",
    "",
    "",
]
issue_format = "[#{issue}](https://github.com/openscm/gcages/pull/{issue})"
type = [
    { directory = "breaking", name = "⚠️ Breaking Changes", showcontent = true },
    { directory = "deprecation", name = "🗑️ Deprecations", showcontent = true },
    { directory = "feature", name = "🆕 Features", showcontent = true },
    { directory = "improvement", name = "🎉 Improvements", showcontent = true },
    { directory = "fix", name = "🐛 Bug Fixes", showcontent = true },
    { directory = "docs", name = "📚 Improved Documentation", showcontent = true },
    { directory = "trivial", name = "🔧 Trivial/Internal Changes", showcontent = false },
]

[tool.liccheck]
authorized_licenses = [
    "bsd",
    "bsd license",
    "BSD 3-Clause",
    "BSD-3-Clause",
    # numpy special case
    "BSD-3-Clause AND 0BSD AND MIT AND Zlib AND CC0-1.0",
    "CC0",
    "apache",
    "apache 2.0",
    "apache-2.0",
    "apache software",
    "apache software license",
    "Apache License, Version 2.0",
    "CMU License (MIT-CMU)",
    "Historical Permission Notice and Disclaimer (HPND)",
    "isc",
    "isc license",
    "isc license (iscl)",
    "gnu lgpl",
    "lgpl with exceptions or zpl",
    "LGPLv2+",
    "GNU Lesser General Public License v2 (LGPLv2)",
    "GNU Lesser General Public License v2 or later (LGPLv2+)",
    "mit",
    "mit license",
    "Mozilla Public License 2.0 (MPL 2.0)",
    "psf-2.0",
    "python software foundation",
    "python software foundation license",
    "The Unlicense (Unlicense)",
    "zpl 2.1",
]
unauthorized_licenses = [
    "agpl",
    "gnu agpl",
    "gpl v3",
    "gplv3",
    "gpl v2",
    "gplv2",
    "gpl v1",
    "gplv1",
]
