[project]
name = "gcages"
version = "0.14.1a1"
description = "Global Climate Assessment of Global Emission Scenarios, typically (but not always) produced by Integrated Assessment Models (IAMs)."
authors = [
    { name = "Zebedee Nicholls", email = "zebedee.nicholls@climate-resource.com" },
]
license = { text = "3-Clause BSD License" }
requires-python = ">=3.10"
dependencies = [
    "backports-strenum>=1.3.1 ; python_version < '3.11'",
    "numpy>=1.26.0; python_version < '3.13'",
    "numpy>=2.1.0; python_version >= '3.13'",
    "pandas>=2.2.0",
    "pandas-openscm>=0.8.1",
]
readme = "README.md"
classifiers = [
    # Full list: https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://gcages.readthedocs.io"
Documentation = "https://gcages.readthedocs.io"
Changelog = "https://gcages.readthedocs.io/en/stable/changelog"
Repository = "https://github.com/openscm/gcages"
Issues = "https://github.com/openscm/gcages/issues"


[project.optional-dependencies]
ar6 = [
    "aneris-iamc>=0.4.2 ; python_version >= '3.10'",
    # The next two shouldn't need to be specified
    # but for some reason are
    "pycountry>=23.12.11 ; python_version >= '3.10'",
    "importlib-resources>=5.0 ; python_version >= '3.10' and python_version <= '3.11'",
    # Required to allow ciceroscm to be imported via openscm-runner
    "setuptools>=60.1.0 ; python_version >= '3.12'",
    "openscm-runner>=0.13.0",
    "pandas-indexing[units]>=0.6.3",
    "pandas-openscm[db]>=0.8.1",
    "pymagicc>=2.1.5",
    "scipy>=1.13.0",
    "scmdata>=0.18.0",
    "silicone>=1.3.0",
]
cmip7scenariomip = [
    "aneris-iamc>=0.4.2 ; python_version >= '3.10'",
    # The next two shouldn't need to be specified
    # but for some reason are
    "pycountry>=24.0 ; python_version >= '3.10'",
    "importlib-resources>=5.0 ; python_version >= '3.10' and python_version <= '3.11'",
    "openscm-runner>=0.13.0",
    # Required to allow ciceroscm to be imported via openscm-runner
    "setuptools>=60.1.0 ; python_version >= '3.12'",
    "pandas-indexing[units]>=0.6.3",
    "pandas-openscm[db]>=0.8.1",
    "pymagicc>=2.1.5",
    "scipy>=1.13.0",
    "scmdata>=0.18.0",
    "silicone>=1.3.0",
]
progress = [
    "tqdm>=4.0.0",
]
full = [
    "gcages[ar6]",
    "gcages[cmip7scenariomip]",
    "gcages[progress]",
]


[dependency-groups]
# The development dependencies are pinned
# to give a consistent starting point when using this template.
# They should be removed/updated/changed/loosened as suits your project.
# (As soon as you have a lock file, you can remove all of the implied dependencies.)
# (This is a workaround for the fact
# that we can't easily include the lock file in the copier template
# because of how locking works and the order of operations).
dev = [
    # Key dependencies
    # ----------------
    "liccheck==0.9.2",
    "mypy==1.14.0",
    "pandas-indexing>=0.6.3",
    "pandas-stubs>=2.2.2.240807",
    "pint>=0.24.4 ; python_version < '3.11'",
    "pint>=0.25.3 ; python_version >= '3.11'",
    # Required for liccheck, see https://github.com/dhatim/python-license-check/pull/113
    "pip==24.3.1",
    "pre-commit==4.0.1",
    "pytest>=8.3.4",
    # Required for liccheck, see https://github.com/dhatim/python-license-check/pull/113
    "setuptools==75.6.0",
    "tomli==2.2.1 ; python_full_version < '3.11'",
    "tomli-w==1.2.0",
    "towncrier==24.8.0",
    "tqdm>=4.67.1",
    "typing-extensions>=4.12.2",
]
docs = [
    # Key dependencies
    # ----------------
    "attrs==25.3.0",
    "mkdocs-autorefs==1.4.4",
    "mkdocs-gen-files==0.6.1",
    "mkdocs-literate-nav==0.6.3",
    "mkdocs-material==9.7.6",
    "mkdocs-section-index==0.3.12",
    "mkdocstrings-python-xref==2.1.1",
    "mkdocstrings-python==2.0.3",
    "properdocs==1.6.7",
    "pymdown-extensions==10.21.3",
    "ruff==0.15.12",
    # Key dependencies for notebook_based_docs
    # ----------------------------------------
    "jupyterlab==4.4.5",
    "jupytext==1.17.2",
    "mkdocs-jupyter==0.25.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "seaborn>=0.13.2",
    "pandas-indexing>=0.6.3",
    "openscm-units>=0.6.3",
    "pint>=0.24.4 ; python_version < '3.11'",
    "pint>=0.25.3 ; python_version >= '3.11'",
]
# For minimum test dependencies.
# These are used when running our minimum PyPI install tests.
tests-min = [
    # Key dependencies
    # ----------------
    "pytest==8.3.4",
    # "pluggy==1.5.0",
    "pytest-regressions>=2.7.0",
]
tests-full = [
    "pandas-indexing>=0.6.3",
    "pyarrow>=19.0.1",
    "pytest-cov>=6.0.0",
]
# Test dependencies
# (partly split because liccheck uses toml,
# which doesn't support inhomogeneous arrays).
tests = [
    {include-group = "tests-min"},
    {include-group = "tests-full"},
]
all-dev = [
    {include-group = "dev"},
    {include-group = "docs"},
    {include-group = "tests"},
]

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = [
    "src/gcages",
    "LICENCE",
]
excludes = ["tests"]

[tool.coverage.run]
source = ["gcages"]
omit = [
    "src/gcages/aneris_helpers.py",  # should all be pushed upstream, not our problem
]
branch = true

[tool.coverage.report]
fail_under = 60  # drive this up when we redo the testing strategy, see https://github.com/openscm/gcages/pull/54
skip_empty = true
show_missing = true
exclude_also = [
    "if TYPE_CHECKING",
    # Type overloading lines
    "@overload",
    "\\.\\.\\.",

]

[tool.mypy]
strict = true
disallow_any_unimported = true
show_error_codes = true
show_error_context = true
warn_unreachable = true
follow_imports = "normal"

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
markers = [
    # We skip some tests in CI by default
    # because they are very slow
    # and don't provide any true extra tests of robustness.
    # We have separate CI for these.
    "skip_ci_default: marks tests as being skipped in CI by default",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "superslow: marks tests as super slow i.e. taking multiple minutes to run (deselect with '-m \"not superslow\"')",
    "magicc_v760a3: tests requiring MAGICC 7.6.0a3",
]

[tool.ruff]
src = [
    "src",
]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "PL",
    "TRY",
    "NPY",
    "RUF",
    "UP",
    "S",
]
unfixable = [
    "PD002",
]
ignore = [
    "D200",
    "D400",
    "UP007",
]

[tool.ruff.lint.per-file-ignores]
"test*.py" = [
    "D",
    "S101",
    "PLR2004",
]
"docs/*" = [
    "D100",
    "E402",
    "S101",
]
"docs/how-to-guides/how-to-run-the-ar6-workflow.py" = [
    "E501",
    "PLR2004",
]
"docs/how-to-guides/how-to-run-the-scijune2026-workflow.py" = [
    "E501",
    "PLR2004",
]
"scripts/*" = [
    "S101",
]
"stubs/*" = [
    "PLR0913",
]

[tool.ruff.lint.isort]
known-first-party = [
    "src",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.towncrier]
package = "gcages"
package_dir = "src"
filename = "docs/changelog.md"
directory = "changelog/"
title_format = "## gcages {version} ({project_date})"
underlines = [
    "",
    "",
    "",
]
issue_format = "[#{issue}](https://github.com/openscm/gcages/pull/{issue})"
type = [
    { directory = "breaking", name = "⚠️ Breaking Changes", showcontent = true },
    { directory = "deprecation", name = "🗑️ Deprecations", showcontent = true },
    { directory = "feature", name = "🆕 Features", showcontent = true },
    { directory = "improvement", name = "🎉 Improvements", showcontent = true },
    { directory = "fix", name = "🐛 Bug Fixes", showcontent = true },
    { directory = "docs", name = "📚 Improved Documentation", showcontent = true },
    { directory = "trivial", name = "🔧 Trivial/Internal Changes", showcontent = false },
]

[tool.liccheck]
authorized_licenses = [
    "bsd",
    "bsd license",
    "BSD 3-Clause",
    "BSD-3-Clause",
    # numpy special case
    "BSD-3-Clause AND 0BSD AND MIT AND Zlib AND CC0-1.0",
    "CC0",
    "apache",
    "apache 2.0",
    "apache-2.0",
    "apache software",
    "apache software license",
    "Apache License, Version 2.0",
    "CMU License (MIT-CMU)",
    "Historical Permission Notice and Disclaimer (HPND)",
    "isc",
    "isc license",
    "isc license (iscl)",
    "gnu lgpl",
    "lgpl with exceptions or zpl",
    "LGPLv2+",
    "GNU Lesser General Public License v2 (LGPLv2)",
    "GNU Lesser General Public License v2 or later (LGPLv2+)",
    "mit",
    "mit license",
    "Mozilla Public License 2.0 (MPL 2.0)",
    "psf-2.0",
    "python software foundation",
    "python software foundation license",
    "The Unlicense (Unlicense)",
    "zpl 2.1",
]
unauthorized_licenses = [
    "agpl",
    "gnu agpl",
    "gpl v3",
    "gplv3",
    "gpl v2",
    "gplv2",
    "gpl v1",
    "gplv1",
]
